Fix dangerous security vulnerability around automatic DNS lookups.

--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -921,15 +921,15 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>970 539 700 622 0 0 2560 1417 </string>
+	<string>930 614 700 622 0 0 2560 1440 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>600 440 606 469 0 0 2560 1417 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>388 726 918 512 0 0 2560 1417 </string>
+	<string>385 755 796 473 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>909 735 585 402 0 0 2560 1417 </string>
+	<string>0 0 2560 1440 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 798 585 402 0 0 2560 1417 </string>
+	<string>0 295 585 402 0 0 1280 777 </string>
 	<key>NeverWarnAboutShortLivedSessions_F0D85124-7461-4344-B9B4-3D5C9FB8E250</key>
 	<true/>
 	<key>NeverWarnAboutShortLivedSessions_F0D85124-7461-4344-B9B4-3D5C9FB8E250_selection</key>
@@ -2728,6 +2728,8 @@
 	<false/>
 	<key>PasteTabToStringTabStopSize</key>
 	<integer>4</integer>
+	<key>PerformDNSLookups</key>
+	<false/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -2786,7 +2788,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-09-19T17:50:38Z</date>
+	<date>2017-09-20T15:31:00Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -2837,6 +2839,8 @@
 	<string>/-+\~_.</string>
 	<key>findIgnoreCase_iTerm</key>
 	<true/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
